data/derived/comb/progs/unify/prog2692.ml.out
Characters 29-42:
  let fixpoint (f,b) = wwhile ((f b, xx = b),b);;
                               ^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
